--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,7 @@
----
 on:
   push:
     branches:
-      - master
+      - temp
     tags:
       - "*"
 name: Build
@@ -14,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        ubuntu: ["22.04", "24.04"]
+        ubuntu: ["22.04"]
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -55,104 +54,15 @@ jobs:
           pigz "jetson-nano-300_${{ matrix.ubuntu }}_${L4T32_BSP}.img"
           ls -lht "jetson-nano-300_${{ matrix.ubuntu }}_${L4T32_BSP}.img.gz"
 
-      - name: Build jetson image for Jetson nano revision 200
-        if: matrix.ubuntu == '22.04'
-        run: |
-          just build-jetson-image \
-            -b jetson-nano \
-            -r 200
-          mv jetson.img "jetson-nano-200_${{ matrix.ubuntu }}_${L4T32_BSP}.img"
-          pigz "jetson-nano-200_${{ matrix.ubuntu }}_${L4T32_BSP}.img"
-          ls -lht "jetson-nano-200_${{ matrix.ubuntu }}_${L4T32_BSP}.img.gz"
-
-      - name: Build jetson image for Jetson nano revision 100
-        if: matrix.ubuntu == '22.04'
-        run: |
-          just build-jetson-image \
-            -b jetson-nano \
-            -r 100
-          mv jetson.img "jetson-nano-100_${{ matrix.ubuntu }}_${L4T32_BSP}.img"
-          pigz "jetson-nano-100_${{ matrix.ubuntu }}_${L4T32_BSP}.img"
-          ls -lht "jetson-nano-100_${{ matrix.ubuntu }}_${L4T32_BSP}.img.gz"
-
-      - name: Build jetson image for Jetson nano 2G
-        if: matrix.ubuntu == '22.04'
-        run: |
-          just build-jetson-image \
-            -b jetson-nano-2gb
-          mv jetson.img "jetson-nano-2gb_${{ matrix.ubuntu }}_${L4T32_BSP}.img"
-          pigz "jetson-nano-2gb_${{ matrix.ubuntu }}_${L4T32_BSP}.img"
-          ls -lht "jetson-nano-2gb_${{ matrix.ubuntu }}_${L4T32_BSP}.img.gz"
-
-      - name: Build jetson image for jetson orin nano SD
-        if: matrix.ubuntu == '24.04'
-        run: |
-          just build-jetson-image \
-            -b jetson-orin-nano \
-            -d SD \
-            -l 36
-          mv jetson.img "jetson-orin-nano_${{ matrix.ubuntu }}_${L4T36_BSP}_SD.img"
-          pigz "jetson-orin-nano_${{ matrix.ubuntu }}_${L4T36_BSP}_SD.img"
-          ls -lht "jetson-orin-nano_${{ matrix.ubuntu }}_${L4T36_BSP}_SD.img.gz"
-
-      - name: Build jetson image for jetson orin nano USB
-        if: matrix.ubuntu == '24.04'
-        run: |
-          just build-jetson-image \
-            -b jetson-orin-nano \
-            -d USB \
-            -l 36
-          mv jetson.img "jetson-orin-nano_${{ matrix.ubuntu }}_${L4T36_BSP}_USB.img"
-          pigz "jetson-orin-nano_${{ matrix.ubuntu }}_${L4T36_BSP}_USB.img"
-          ls -lht "jetson-orin-nano_${{ matrix.ubuntu }}_${L4T36_BSP}_USB.img.gz"
-
-      - name: Build jetson image for jetson agx xavier SD
-        if: matrix.ubuntu == '22.04'
-        run: |
-          just build-jetson-image \
-            -b jetson-agx-xavier \
-            -d SD \
-            -l 35
-          mv jetson.img "jetson-agx-xavier_${{ matrix.ubuntu }}_${L4T35_BSP}_SD.img"
-          pigz "jetson-agx-xavier_${{ matrix.ubuntu }}_${L4T35_BSP}_SD.img"
-          ls -lht "jetson-agx-xavier_${{ matrix.ubuntu }}_${L4T35_BSP}_SD.img.gz"
-
-      - name: Build jetson image for jetson agx xavier USB
-        if: matrix.ubuntu == '22.04'
-        run: |
-          just build-jetson-image \
-            -b jetson-agx-xavier \
-            -d USB \
-            -l 35
-          mv jetson.img "jetson-agx-xavier_${{ matrix.ubuntu }}_${L4T35_BSP}_USB.img"
-          pigz "jetson-agx-xavier_${{ matrix.ubuntu }}_${L4T35_BSP}_USB.img"
-          ls -lht "jetson-agx-xavier_${{ matrix.ubuntu }}_${L4T35_BSP}_USB.img.gz"
-
-      - name: Build jetson image for jetson xavier nx SD
-        if: matrix.ubuntu == '22.04'
-        run: |
-          just build-jetson-image \
-          -b jetson-xavier-nx \
-          -d SD \
-          -l 35
-          mv jetson.img "jetson-xavier-nx_${{ matrix.ubuntu }}_${L4T35_BSP}_SD.img"
-          pigz "jetson-xavier-nx_${{ matrix.ubuntu }}_${L4T35_BSP}_SD.img"
-          ls -lht "jetson-xavier-nx_${{ matrix.ubuntu }}_${L4T35_BSP}_SD.img.gz"
-
-      - name: Build jetson image for jetson xavier nx USB
-        if: matrix.ubuntu == '22.04'
-        run: |
-          just build-jetson-image \
-          -b jetson-xavier-nx \
-          -d USB \
-          -l 35
-          mv jetson.img "jetson-xavier-nx_${{ matrix.ubuntu }}_${L4T35_BSP}_USB.img"
-          pigz "jetson-xavier-nx_${{ matrix.ubuntu }}_${L4T35_BSP}_USB.img"
-          ls -lht "jetson-xavier-nx_${{ matrix.ubuntu }}_${L4T35_BSP}_USB.img.gz"
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: jetson-images
+          path: "jetson-nano-300_${{ matrix.ubuntu }}_${L4T32_BSP}.img.gz"
 
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           body: |
-            [CHANGELOG.md](${{ github.server_url }}/${{ github.repository }}/blob/master/CHANGELOG.md)
+            CHANGELOG.md
           files: "jetson*"
